new window, edit, new, delete.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,11 +1,1 @@
-/Client.class
-/Hello.class
-/HelloWorldMain.class
-/Server.class
-/ClientWindow.class
-/IFlightServer.class
-/IFlightClient.class
-/Flight.class
-/ClientWindow$1.class
-/ClientWindow$NewActionListener.class
-/Flightdetails.class
+/EditDialog$1.class
